force-app/main/default/objects/SemaineType__c/SemaineType__c.object-meta.xml
<CustomObject>
    <description>CRM-514 : Période disponible pour les RDV par magasin ou vendeur visible sur le calendrier</description>
    <label>Semaine Type</label>
    <nameField>
        <displayFormat>ST/{YYYY}/{00000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Semaines type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>