force-app/main/default/objects/SemaineType__c/fields/codeMagasin__c.field-meta.xml
<CustomField>
    <fullName>codeMagasin__c</fullName>
    <description>CRM-514 : Code du magasin pour la semaine de type magasin</description>
    <label>Code Magasin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>