force-app/main/default/objects/SemaineType__c/fields/dateDebut__c.field-meta.xml
<CustomField>
    <fullName>dateDebut__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>CRM-514 : Date de début de la semaine type</description>
    <label>Date de début</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>