force-app/main/default/objects/SemaineType__c/fields/dateFin__c.field-meta.xml
<CustomField>
    <fullName>dateFin__c</fullName>
    <description>CRM-514 : Date de fin de la semaine type</description>
    <label>Date de fin</label>
    <type>DateTime</type>
</CustomField>