force-app/main/default/objects/SemaineType__c/fields/periodes__c.field-meta.xml
<CustomField>
    <fullName>periodes__c</fullName>
    <description>CRM-514 : Périodes de prises de RDV de la semaine par jour avec heures de début et de fin</description>
    <inlineHelpText>Une ligne par périodes au format &lt;jour&gt;;&lt;heure de debut&gt;;&lt;heure de fin&gt;</inlineHelpText>
    <label>Périodes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>