force-app/main/default/objects/SemaineType__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>CRM-514 : Type de la semaine (magasin ou vendeur)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Magasin</fullName>
            </value>
            <value>
                <fullName>Vendeur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>