force-app/main/default/objects/SemaineType__c/fields/vendeur__c.field-meta.xml
<CustomField>
    <fullName>vendeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-514 : Vendeur pour la semaine</description>
    <label>Vendeur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semaines_type</relationshipName>
    <type>Lookup</type>
</CustomField>