force-app/main/default/objects/SemaineType__c/validationRules/VR001_K2_Semaine_DateFin.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Semaine_DateFin</fullName>
    <active>true</active>
    <description>CRM-514 : La date de fin est obligatoire si la semaine est de type Vendeur</description>
    <errorConditionFormula>AND($User.ByPassValidationRule__c = False, ISBLANK(dateFin__c), ISPICKVAL(type__c, &apos;Vendeur&apos;))</errorConditionFormula>
    <errorDisplayField>dateFin__c</errorDisplayField>
    <errorMessage>La date de fin est obligatoire !</errorMessage>
</ValidationRule>