force-app/main/default/objects/SemaineType__c/validationRules/VR001_K2_Semaine_TypeVendeur.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Semaine_TypeVendeur</fullName>
    <active>true</active>
    <description>CRM-514 : Le vendeur est obligatoire si la semaine est de type Vendeur</description>
    <errorConditionFormula>AND($User.ByPassValidationRule__c = False, ISBLANK(vendeur__c), ISPICKVAL(type__c, &apos;Vendeur&apos;))</errorConditionFormula>
    <errorDisplayField>vendeur__c</errorDisplayField>
    <errorMessage>Le vendeur est obligatoire !</errorMessage>
</ValidationRule>